--- a/odoo/tasks/install.yml
+++ b/odoo/tasks/install.yml
@@ -1,32 +1,31 @@
 ---
-
 - name: Update APT cache (Debian)
-  apt:
+  ansible.builtin.apt:
     cache_valid_time: 86400
-    update_cache: True
+    update_cache: true
   when: ansible_os_family == 'Debian'
 
 - name: Install system packages
-  include_tasks:
+  ansible.builtin.include_tasks:
     file: install_system_packages.yml
     apply:
       tags: packages
 
 - name: Install PyPI packages
-  include_tasks:
+  ansible.builtin.include_tasks:
     file: install_pip_packages.yml
     apply:
       tags: packages
 
 - name: Install NodeJS packages
-  include_tasks:
+  ansible.builtin.include_tasks:
     file: install_npm_packages.yml
     apply:
       tags: packages
 
 - name: Install wkhtmltopdf
-  include_tasks:
+  when: odoo_wkhtmltox_url is defined
+  ansible.builtin.include_tasks:
     file: install_wkhtmltopdf.yml
     apply:
       tags: packages
-  when: odoo_wkhtmltox_url is defined
