--- a/odoo/meta/main.yml
+++ b/odoo/meta/main.yml
@@ -4,10 +4,11 @@ galaxy_info:
   description: Ansible role to install Odoo and configure it.
   company: Bobbies
   license: GPLv3
-  min_ansible_version: 2.4
+  min_ansible_version: "7.4.0"
   platforms:
     - name: Debian
       versions:
-        - 10
+        - buster
+        - bullseye
   galaxy_tags: []
 dependencies: []
