--- a/odoo/tasks/backup_create.yml
+++ b/odoo/tasks/backup_create.yml
@@ -1,24 +1,23 @@
 ---
-
 - name: Create a filestore copy
-  synchronize:
-    archive: yes
-    compress: no
-    delete: yes
-    recursive: yes
-    links: yes
-    group: yes
-    owner: yes
+  when: odoo_backup_filestore
+  delegate_to: "{{ inventory_hostname }}"
+  ansible.posix.synchronize:
+    archive: true
+    compress: false
+    delete: true
+    recursive: true
+    links: true
+    group: true
+    owner: true
     src: "{{ odoo_config_data_dir }}/{{ item }}/"
     dest: "{{ odoo_update_datadir_backup }}/{{ item }}/"
   loop:
     - addons
     - filestore
-  delegate_to: "{{ inventory_hostname }}"
-  when: odoo_backup_filestore
 
 - name: Backup database
-  postgresql_db:
+  community.postgresql.postgresql_db:
     login_host: "{{ odoo_config_db_host }}"
     port: "{{ odoo_config_db_port | int }}"
     ssl_mode: "{{ odoo_config_db_sslmode }}"
