--- a/odoo/tasks/backup_restore.yml
+++ b/odoo/tasks/backup_restore.yml
@@ -1,7 +1,6 @@
 ---
-
 - name: Restore backuped database
-  postgresql_db:
+  community.postgresql.postgresql_db:
     login_host: "{{ odoo_config_db_host }}"
     port: "{{ odoo_config_db_port | int }}"
     ssl_mode: "{{ odoo_config_db_sslmode }}"
@@ -14,18 +13,18 @@
     target_opts: "--clean --create"
 
 - name: Restore backuped filestore
-  synchronize:
-    archive: yes
-    compress: no
-    delete: yes
-    recursive: yes
-    links: yes
-    group: yes
-    owner: yes
+  when: odoo_backup_filestore
+  delegate_to: "{{ inventory_hostname }}"
+  ansible.posix.synchronize:
+    archive: true
+    compress: false
+    delete: true
+    recursive: true
+    links: true
+    group: true
+    owner: true
     src: "{{ odoo_update_datadir_backup }}/{{ item }}/"
     dest: "{{ odoo_config_data_dir }}/{{ item }}/"
   loop:
     - addons
     - filestore
-  delegate_to: "{{ inventory_hostname }}"
-  when: odoo_backup_filestore
