--- a/odoo/tasks/install_pip_packages.yml
+++ b/odoo/tasks/install_pip_packages.yml
@@ -1,23 +1,23 @@
 ---
-
 - name: Upgrade pip
-  pip:
+  ansible.builtin.pip:
     name: pip
-    executable: "{{ pip_executable }}"
     extra_args: --upgrade
+    virtualenv: "{{ odoo_virtualenv }}"
+    virtualenv_site_packages: true
 
 - name: Install Odoo dependencies (pip)
-  pip:
-    name: "{{ query('flattened', ['{{ odoo_pip_packages | default([]) }}', '{{ odoo_extra_pip_packages | default([]) }}']) }}"
-    executable: "{{ pip_executable }}"
+  ansible.builtin.pip:
+    name: "{{ (odoo_pip_packages | default([])) + (odoo_extra_pip_packages | default([])) | flatten }}"
+    virtualenv: "{{ odoo_virtualenv }}"
 
 - name: Check if a PIP requirements file exists
-  stat:
+  ansible.builtin.stat:
     path: "{{ odoo_extra_pip_requirements }}"
   register: pip_requirements
 
 - name: Install Odoo dependencies (pip requirements)
-  pip:
-    requirements: "{{ odoo_extra_pip_requirements }}"
-    executable: "{{ pip_executable }}"
   when: pip_requirements.stat.exists
+  ansible.builtin.pip:
+    requirements: "{{ odoo_extra_pip_requirements }}"
+    virtualenv: "{{ odoo_virtualenv }}"
