--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -26,14 +26,23 @@ server {
     access_log /var/log/nginx/odoo.access.log timed_combined;
     error_log /var/log/nginx/odoo.error.log;
 
-    # Configure proxy to display the client ip address
     {% if odoo_nginx_trusted_ips is defined and odoo_nginx_trusted_ips|bool %}
+    # Configure proxy to display the client ip address
     {% for trusted_ip in odoo_nginx_trusted_ips|list %}
     set_real_ip_from {{ trusted_ip }};
     {% endfor %}
     real_ip_header X-Forwarded-For;
     real_ip_recursive on;
     {% endif %}
+
+    # Add headers for security
+    add_header Content-Security-Policy "{{ odoo_nginx_content_security_policy }}" always;
+    add_header Referrer-Policy "{{ odoo_nginx_referrer_policy }}";
+    add_header Strict-Transport-Security "{{ odoo_nginx_strict_transport_security }}";
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";  # Legacy browsers
+
+    {{ odoo_nginx_server_extra_config }}
 
     # Add headers for odoo proxy mode
     proxy_set_header HTTPS "on";
@@ -52,9 +61,10 @@ server {
         if (-f $document_root/maintenance.on) {
             return 503;
         }
-        proxy_redirect off;
-        proxy_pass http://odoo;
         client_max_body_size  {{ odoo_nginx_client_max_body_size }};
+        proxy_cookie_path / "{{ odoo_nginx_set_cookie }}";
+        proxy_pass http://odoo;
+        proxy_redirect off;
     }
 
     # Cache configuration
