--- a/odoo/defaults/main.yml
+++ b/odoo/defaults/main.yml
@@ -118,6 +118,7 @@ odoo_newrelic_region: EU
 
 # Nginx configuration
 odoo_maintenance_team: "Odoo IT team"
+odoo_nginx_cache_deletion: true
 odoo_nginx_cache_folder: "/var/cache/nginx/"
 odoo_nginx_client_max_body_size: 25M
 odoo_nginx_content_security_policy: >-
